--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,45 +1,11 @@
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/pathpilot_db?useUnicode=true&characterEncoding=utf8&useSSL=false&createDatabaseIfNotExist=true
-    username: root
-    password: Decembrie2001
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate-dialect: org.hibernate.dialect.MySQL5Dialect
-      hibernate.format_sql: true
+# H2 in-memory database configuration
+spring.datasource.url=jdbc:h2:mem:pathPilot_test_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-    show-sql: true
-
-  liquibase:
-    change-log: classpath:db/changelog/db.changelog-master.xml
-
-server:
-  error:
-    include-binding-errors: always
-    include-message: always
-  port: 8080
-
-
-
-api:
-  common:
-    version: 1.0.0
-    title: PathPilot Microservices API
-    description: Management ecommerce platform for selling and buying products and services for the evolution of the human being and the planet Earth in the future and present.
-    termsOfService: MY TERMS OF SERVICE
-    license: MY LICENSE
-    licenseUrl: MY LICENSE URL
-    externalDocDesc: MY WIKI PAGE
-    externalDocUrl: MY WIKI URL
-    contact:
-      name: Flore Denis
-      url:
-      email: floredenis907@yahoo.com
-  responseCodes:
-    ok.description: OK
-    badRequest.description: Bad Request, invalid format of the request. See response message for more information
-    notFound.description: Not found, the specified id does not exist
-    unprocessableEntity.description: Unprocessable entity, input parameters caused the processing to fail. See response message for more information
-
+# Other configurations (feel free to adjust them based on your needs)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+server.error.include-message=always
+server.error.include-binding-errors=always
