--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,15 +40,15 @@ jobs:
       - name: Checkout other repository
         uses: actions/checkout@v2
         with:
-          repository: 'nimigeanconstantinion/docker-compose-microservices'
+          repository: 'FloreDenis2001/path-pilot-deploy'
           token: ${{ secrets.DEPLOY_ACCESS_TOKEN }}
-          path: 'docker-compose-microservices'
+          path: 'path-pilot-deploy'
 
       - name: Update and commit app version in docker-compose.yml in other repository
         run: |
-          cd docker-compose-microservices/
+          cd path-pilot-deploy/
           echo -e "Current ./docker-compose.yaml\n$(cat docker-compose.yaml)"
-          sed -i -E 's_(ion21/query-service:)([^"]*)_\1'${{ env.BUILD_NUMBER }}'_' docker-compose.yaml
+          sed -i -E 's_(floredenis2001/path-pilot-service:)([^"]*)_\1'${{ env.BUILD_NUMBER }}'_' docker-compose.yaml
           echo -e "Updated ./docker-compose.yaml\n$(cat docker-compose.yaml)"
           git config user.name github-actions
           git config user.email github-actions@github.com
