--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,4 +54,4 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "new app version: ${{ env.BUILD_NUMBER }}"
-          git push origin HEAD:master
+          git push origin HEAD:main
