--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.10.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+            <version>2.12.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
