--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
     password: Decembrie2001
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate-dialect: org.hibernate.dialect.MySQL5Dialect
       hibernate.format_sql: true
